--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 astroid==2.2.5
 Click==7.0
 Flask==1.1.1
+Flask-JWT-Extended==3.23.0
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.10.1
 lazy-object-proxy==1.4.2
 MarkupSafe==1.1.1
+marshmallow==3.2.0
 mccabe==0.6.1
+psycopg2==2.8.3
+PyJWT==1.7.1
 pylint==2.3.1
 python-dotenv==0.10.3
 six==1.12.0
